--- a/styles/footer.css
+++ b/styles/footer.css
@@ -50,6 +50,9 @@
     position: absolute;
     top: 7px;
 }
+.quick-link-address p{
+    padding-left: 1.2rem;
+}
 .quick-link-icon{
     width: 10px;
 }
@@ -82,4 +85,5 @@
     }
 
 }
+
 
